# ai-eval-cli

./: .gitignore  README.md  pyproject.toml
aieval/: cli.py
datasets/: starter.json
